<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    app:layout_scrollFlags="scroll|exitUntilCollapsed">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/detailsActivity_recyclerView_similarMovies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            tools:listitem="@layout/item_movies"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/coordinatorLayout">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:contentScrim="@color/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBackground"
                    android:paddingBottom="10dp"
                    tools:context=".features.details.view.DetailsActivity">

                    <ImageView
                        android:id="@+id/detailsActivity_imageView_background"
                        android:layout_width="0dp"
                        android:layout_height="490dp"
                        android:fitsSystemWindows="true"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/detailsActivity_imageView_likes"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:contentDescription="@string/like"
                        android:focusable="true"
                        android:src="@drawable/ic_favorite_border_black_24dp"
                        app:layout_constraintBottom_toBottomOf="@+id/detailsActivity_imageView_background"
                        app:layout_constraintEnd_toEndOf="@+id/detailsActivity_imageView_background" />

                    <ImageView
                        android:id="@+id/detailsActivity_imageView_likesReady"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/likes"
                        android:src="@drawable/ic_favorite_white_24dp"
                        android:tint="#FFFFFF"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detailsActivity_imageView_background" />

                    <TextView
                        android:id="@+id/detailsActivity_textView_likes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/sen_regular"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@+id/detailsActivity_imageView_likesReady"
                        app:layout_constraintStart_toEndOf="@+id/detailsActivity_imageView_likesReady"
                        app:layout_constraintTop_toTopOf="@+id/detailsActivity_imageView_likesReady"
                        tools:text="1.2K" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/sen_regular"
                        android:text="@string/likes"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@+id/detailsActivity_textView_likes"
                        app:layout_constraintStart_toEndOf="@+id/detailsActivity_textView_likes"
                        app:layout_constraintTop_toTopOf="@+id/detailsActivity_textView_likes" />

                    <TextView
                        android:id="@+id/detailsActivity_textView_popularity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/sen_regular"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@+id/detailsActivity_imageView_views"
                        app:layout_constraintEnd_toStartOf="@+id/textView3"
                        app:layout_constraintTop_toTopOf="@+id/detailsActivity_imageView_views"
                        app:layout_constraintVertical_bias=".5"
                        tools:text="1000" />

                    <ImageView
                        android:id="@+id/detailsActivity_imageView_views"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/views"
                        android:src="@drawable/ic_views"
                        android:tint="#FFFFFF"
                        app:layout_constraintBottom_toBottomOf="@+id/detailsActivity_imageView_likesReady"
                        app:layout_constraintEnd_toStartOf="@+id/detailsActivity_textView_popularity"
                        app:layout_constraintTop_toTopOf="@+id/detailsActivity_imageView_likesReady" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="50dp"
                        android:fontFamily="@font/sen_regular"
                        android:text="@string/views"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@+id/detailsActivity_textView_popularity"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/detailsActivity_textView_popularity" />

                    <ImageView
                        android:id="@+id/detailsActivity_imageView_back"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:contentDescription="@string/back"
                        android:focusable="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/detailsActivity_imageView_background"
                        app:srcCompat="@drawable/ic_back" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ImageView
        android:id="@+id/detailsActivity_imageView_error"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/error"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_signal_cellular_connected_no_internet_0_bar_black_24dp" />

    <TextView
        android:id="@+id/detailsActivity_textView_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/sen_regular"
        android:text="@string/error_network"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsActivity_imageView_error" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/detailsActivity_materialButton_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sen_regular"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/detailsActivity_textView_error"
        app:layout_constraintStart_toStartOf="@+id/detailsActivity_textView_error"
        app:layout_constraintTop_toBottomOf="@+id/detailsActivity_textView_error"
        app:layout_constraintVertical_bias="0.19" />


</androidx.constraintlayout.widget.ConstraintLayout>

